--- a/app/styles.module.css
+++ b/app/styles.module.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;0,800;1,500&display=swap');
+
 
 .btnprincipal {
     background-color: white;
     color: #553600;
-    border-radius: 0.25rem;;
-    border: 1px solid ;
+    border-radius: 0.25rem;
+    ;
+    border: 1px solid;
     padding: 0.5rem 1rem;
     transition: ease-out 200ms;
 }
@@ -14,89 +17,87 @@
     color: white;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;0,800;1,500&display=swap');
-
-.principal{
+.principal {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
- 
+
 }
 
-.container{
+.container {
     max-width: 1200px;
-    margin:  0 auto;
+    margin: 0 auto;
 }
 
 .header {
-    
-   
-    background-image: linear-gradient(
-      rgba(0, 0, 0, 0.7),
-      rgba(0, 0, 0, 0.7)),
-      url('/bg.jpg');
-    background-position: center bottom;  
+
+
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7),
+            rgba(0, 0, 0, 0.7)),
+        url('/bg.jpg');
+    background-position: center bottom;
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 70vh;
     display: flex;
     align-items: center;
-   
-  }
-  .logo{
+
+}
+
+.logo {
     color: #fffdfc;
     font-size: 25px;
     font-weight: 800;
-  }
+}
 
-  .headerContent{
-    
+.headerContent {
+
     text-align: center;
-  }
+}
 
-  .headerContent h1{
+.headerContent h1 {
     font-size: 75px;
     line-height: 80px;
     color: #f9fafc;
-    text-transform:  uppercase;
+    text-transform: uppercase;
     margin-bottom: 35px;
-  }
+}
 
-  .headerContent p{
+.headerContent p {
     font-size: 16px;
     color: #c5c5c5;
     padding: 0 250px;
-    margin-bottom:  25px;
-  }
+    margin-bottom: 25px;
+}
 
-  .btnt1{
-    display:  inline-block;
+.btnt1 {
+    display: inline-block;
     padding: 13px 35px;
     background-color: #ce967b;
     color: #f9fafc;
     text-transform: uppercase;
-  }
+}
 
-  .btnt1:hover{
+.btnt1:hover {
     background-color: #ebadbd;
-  }
+}
 
-.coffee{
+.coffee {
     padding: 100px 0;
     background-color: #e1e2e6;
     position: relative;
 
 }
 
-.coffeeContent{
+.coffeeContent {
     text-align: center;
 }
 
-.coffeeContent h2{
-    font-size:  55px;
-    line-height:  70px;
+.coffeeContent h2 {
+    font-size: 55px;
+    line-height: 70px;
     color: #323337;
     text-transform: uppercase;
     padding: 0 250px;
@@ -104,36 +105,37 @@
 
 }
 
-.txtP{
+.txtP {
     font-size: 16;
     color: #414247;
     padding: 0 250px;
     margin-bottom: 35px;
 }
 
-.coffeeGroup{
+.coffeeGroup {
     display: flex;
     justify-content: space-between;
     margin-bottom: 50px;
 
 }
 
-.coffee1 img{
+.coffee1 img {
     padding: 0 25pxpx;
 
 }
-.coffee1 img{
+
+.coffee1 img {
     width: 200px;
 
 }
 
-.coffeeImg{
-    position:  absolute;
+.coffeeImg {
+    position: absolute;
     top: 0;
     right: 0;
 }
 
-.coffee1 h3{
+.coffee1 h3 {
     color: #323337;
     font-size: 20px;
     margin-bottom: 15px;
@@ -145,10 +147,9 @@
     background-color: red;
 }
 
-.services{
-    background-image: linear-gradient(
-        rgba(0, 0, 0, 0.7),
-        rgba(0, 0, 0, 0.7)),
+.services {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7),
+            rgba(0, 0, 0, 0.7)),
         url('/bg2.jpg');
     background-repeat: center center;
     background-repeat: no-repeat;
@@ -157,12 +158,12 @@
     padding: 100px 0;
 }
 
-.servicesContent{
+.servicesContent {
     text-align: center;
 
 }
 
-.servicesContent h2{
+.servicesContent h2 {
     font-size: 55px;
     line-height: 70px;
     color: #f9fafc;
@@ -170,48 +171,48 @@
     margin-bottom: 50px;
 }
 
-.servicesContent p{
+.servicesContent p {
     font-size: 16px;
     color: #c5c5c5;
     margin-bottom: 50px;
     padding: 0 100px;
 }
 
-.servicesGroup{
+.servicesGroup {
     display: flex;
     justify-content: space-around;
     margin-bottom: 50px;
 }
 
-.services1{
-    padding:  0 100px;
+.services1 {
+    padding: 0 100px;
 }
 
-.services1 img{
-    width:  25px;
+.services1 img {
+    width: 25px;
     margin-bottom: 15px;
 }
 
-.services1 h3{
+.services1 h3 {
     color: #eaccb3;
     font-size: 18px;
 
 }
 
-.general{
+.general {
 
-display: flex;
+    display: flex;
 
 }
 
-.general1{
-    width:  50%;
+.general1 {
+    width: 50%;
     padding: 100px 250px 100px 100px;
     background-color: #e1e2e6;
 
 }
 
-.general2{
+.general2 {
     background-image: url('/coffe-1.jpg');
     background-position: center center;
     background-repeat: no-repeat;
@@ -219,7 +220,7 @@ display: flex;
     width: 50%;
 }
 
-.general3{
+.general3 {
     background-image: url('/coffee-2.jpg');
     background-position: center center;
     background-repeat: no-repeat;
@@ -227,7 +228,7 @@ display: flex;
     width: 50%;
 }
 
-.h2{
+.h2 {
     font-size: 55px;
     line-height: 70;
     color: #323337;
@@ -235,64 +236,161 @@ display: flex;
     margin-bottom: 20px;
 }
 
-.p{
+.p {
     font-size: 16px;
     color: #414247;
     margin: 25px 0 45px 0;
 }
 
-.blog{
+.blog {
     padding: 100px0;
     text-align: center;
 }
 
-.blogContent{
+.blogContent {
     display: flex;
     justify-content: space-around;
 }
 
-.blog1{
+.blog1 {
     padding: 15px 55px;
 }
 
-.blog1 img{
+.blog1 img {
     width: 250px;
     border-radius: 15px;
     margin-bottom: 15px;
 }
 
-.blog1 h3{
+.blog1 h3 {
     font-size: 25px;
-    color:#323337
+    color: #323337
 }
 
 
-.Productos{
-    text-align: center;
-    background-color: #414247;
-    padding: 100px0;
+.Productos {
     display: flex;
     justify-content: space-around;
-    
+
+    background-color: rgb(138, 97, 0);
+    padding: 100px0;
+
+
+
 }
 
-/* styles.module.css */
+/* Puedes ajustar y agregar más estilos según tus necesidades */
+@media (max-width:991px) {
 
-.navbar {
-    background-color: transparent !important; /* Hace que el fondo sea transparente */
-    border: none; /* Elimina el borde */
-    transition: background-color 0.5s; /* Agrega una transición suave para el cambio de fondo */
+    .header {
+        min-height: 0vh;
+    }
+
+    .headerContent {
+        padding: 100px 30px;
+    }
+
+    .headerContent P {
+        padding: 0;
+    }
+
+    .coffee {
+        padding: 30px;
+    }
+
+    .coffeeContent h2 {
+        padding: 0;
+    }
+
+    .txtP {
+        padding: 0;
+    }
+
+    .coffeeGroup {
+        flex-direction: column;
+        margin-bottom: 0;
+    }
+
+    .coffeeImg {
+        display: none;
+    }
+
+    .services {
+        padding: 30px;
+    }
+
+    .servicesContent P {
+        padding: 0;
+    }
+
+    .servicesGroup{
+        flex-direction: column;
+        margin-bottom: 0;
+    }
+    .services1{
+        margin-bottom: 25;
+
+    }
+
+    .general{
+        flex-direction: column;
+    }
+
+    .general1{
+        width: 100%;
+        padding: 30px;
+        text-align: center;
+    }
+    .general2 .general3{
+        display:  none;
+    }
+
+    .blog{
+        padding: 30px;
+    }
+
+    .blogContent{
+        flex-direction: column;
+    }
+
+    .blog1{
+        padding: 0;
+    }
+
+    /* para transiciones */
+.fade-enter {
+    opacity: 0.01;
   }
   
-  .navbar-brand,
-  .navbar-nav .nav-link {
-    color: rgb(0, 0, 0); /* Cambia el color del texto a blanco */
+  .fade-enter-active {
+    opacity: 1;
+    transition: opacity 500ms ease-in;
   }
   
-  /* Estilos adicionales para resaltar el enlace activo, si es necesario */
-  .navbar-nav .nav-item.active .nav-link {
-    color: #000000; /* Cambia el color del texto del enlace activo */
+  .fade-exit {
+    opacity: 1;
   }
   
-  /* Puedes ajustar y agregar más estilos según tus necesidades */
+  .fade-exit-active {
+    opacity: 0.01;
+    transition: opacity 500ms ease-in;
+  }
   
+
+  /* ... Scroll */
+
+.scrollContainer {
+    overflow-x: auto;
+    white-space: nowrap;
+    height: 400px; /* ajusta la altura según tus preferencias */
+    margin-bottom: 200px; /* para dejar espacio entre el contenido y las barras de desplazamiento */
+  }
+  
+  .row {
+    display: inline-flex;
+  }
+
+     
+
+
+}
