--- a/app/styles.module.css
+++ b/app/styles.module.css
@@ -1,9 +1,9 @@
-
 .btnprincipal {
     background-color: white;
     color: #553600;
-    border-radius: 0.25rem;;
-    border: 1px solid ;
+    border-radius: 0.25rem;
+    ;
+    border: 1px solid;
     padding: 0.5rem 1rem;
     transition: ease-out 200ms;
 }
@@ -16,87 +16,87 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;0,800;1,500&display=swap');
 
-.principal{
+.principal {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
- 
+
 }
 
-.container{
+.container {
     max-width: 1200px;
-    margin:  0 auto;
+    margin: 0 auto;
 }
 
 .header {
-    
-   
-    background-image: linear-gradient(
-      rgba(0, 0, 0, 0.7),
-      rgba(0, 0, 0, 0.7)),
-      url('/bg.jpg');
-    background-position: center bottom;  
+
+
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7),
+            rgba(0, 0, 0, 0.7)),
+        url('/bg.jpg');
+    background-position: center bottom;
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 70vh;
     display: flex;
     align-items: center;
-   
-  }
-  .logo{
+
+}
+
+.logo {
     color: #fffdfc;
     font-size: 25px;
     font-weight: 800;
-  }
+}
 
-  .headerContent{
-    
+.headerContent {
+
     text-align: center;
-  }
+}
 
-  .headerContent h1{
+.headerContent h1 {
     font-size: 75px;
     line-height: 80px;
     color: #f9fafc;
-    text-transform:  uppercase;
+    text-transform: uppercase;
     margin-bottom: 35px;
-  }
+}
 
-  .headerContent p{
+.headerContent p {
     font-size: 16px;
     color: #c5c5c5;
     padding: 0 250px;
-    margin-bottom:  25px;
-  }
+    margin-bottom: 25px;
+}
 
-  .btnt1{
-    display:  inline-block;
+.btnt1 {
+    display: inline-block;
     padding: 13px 35px;
     background-color: #ce967b;
     color: #f9fafc;
     text-transform: uppercase;
-  }
+}
 
-  .btnt1:hover{
+.btnt1:hover {
     background-color: #ebadbd;
-  }
+}
 
-.coffee{
+.coffee {
     padding: 100px 0;
     background-color: #e1e2e6;
     position: relative;
 
 }
 
-.coffeeContent{
+.coffeeContent {
     text-align: center;
 }
 
-.coffeeContent h2{
-    font-size:  55px;
-    line-height:  70px;
+.coffeeContent h2 {
+    font-size: 55px;
+    line-height: 70px;
     color: #323337;
     text-transform: uppercase;
     padding: 0 250px;
@@ -104,36 +104,37 @@
 
 }
 
-.txtP{
+.txtP {
     font-size: 16;
     color: #414247;
     padding: 0 250px;
     margin-bottom: 35px;
 }
 
-.coffeeGroup{
+.coffeeGroup {
     display: flex;
     justify-content: space-between;
     margin-bottom: 50px;
 
 }
 
-.coffee1 img{
+.coffee1 img {
     padding: 0 25pxpx;
 
 }
-.coffee1 img{
+
+.coffee1 img {
     width: 200px;
 
 }
 
-.coffeeImg{
-    position:  absolute;
+.coffeeImg {
+    position: absolute;
     top: 0;
     right: 0;
 }
 
-.coffee1 h3{
+.coffee1 h3 {
     color: #323337;
     font-size: 20px;
     margin-bottom: 15px;
@@ -145,10 +146,9 @@
     background-color: red;
 }
 
-.services{
-    background-image: linear-gradient(
-        rgba(0, 0, 0, 0.7),
-        rgba(0, 0, 0, 0.7)),
+.services {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.7),
+            rgba(0, 0, 0, 0.7)),
         url('/bg2.jpg');
     background-repeat: center center;
     background-repeat: no-repeat;
@@ -157,12 +157,12 @@
     padding: 100px 0;
 }
 
-.servicesContent{
+.servicesContent {
     text-align: center;
 
 }
 
-.servicesContent h2{
+.servicesContent h2 {
     font-size: 55px;
     line-height: 70px;
     color: #f9fafc;
@@ -170,48 +170,48 @@
     margin-bottom: 50px;
 }
 
-.servicesContent p{
+.servicesContent p {
     font-size: 16px;
     color: #c5c5c5;
     margin-bottom: 50px;
     padding: 0 100px;
 }
 
-.servicesGroup{
+.servicesGroup {
     display: flex;
     justify-content: space-around;
     margin-bottom: 50px;
 }
 
-.services1{
-    padding:  0 100px;
+.services1 {
+    padding: 0 100px;
 }
 
-.services1 img{
-    width:  25px;
+.services1 img {
+    width: 25px;
     margin-bottom: 15px;
 }
 
-.services1 h3{
+.services1 h3 {
     color: #eaccb3;
     font-size: 18px;
 
 }
 
-.general{
+.general {
 
-display: flex;
+    display: flex;
 
 }
 
-.general1{
-    width:  50%;
+.general1 {
+    width: 50%;
     padding: 100px 250px 100px 100px;
     background-color: #e1e2e6;
 
 }
 
-.general2{
+.general2 {
     background-image: url('/coffe-1.jpg');
     background-position: center center;
     background-repeat: no-repeat;
@@ -219,7 +219,7 @@ display: flex;
     width: 50%;
 }
 
-.general3{
+.general3 {
     background-image: url('/coffee-2.jpg');
     background-position: center center;
     background-repeat: no-repeat;
@@ -227,7 +227,7 @@ display: flex;
     width: 50%;
 }
 
-.h2{
+.h2 {
     font-size: 55px;
     line-height: 70;
     color: #323337;
@@ -235,64 +235,73 @@ display: flex;
     margin-bottom: 20px;
 }
 
-.p{
+.p {
     font-size: 16px;
     color: #414247;
     margin: 25px 0 45px 0;
 }
 
-.blog{
+.blog {
     padding: 100px0;
     text-align: center;
 }
 
-.blogContent{
+.blogContent {
     display: flex;
     justify-content: space-around;
 }
 
-.blog1{
+.blog1 {
     padding: 15px 55px;
 }
 
-.blog1 img{
+.blog1 img {
     width: 250px;
     border-radius: 15px;
     margin-bottom: 15px;
 }
 
-.blog1 h3{
+.blog1 h3 {
     font-size: 25px;
-    color:#323337
+    color: #323337
 }
 
 
-.Productos{
+.Productos {
     text-align: center;
     background-color: #414247;
     padding: 100px0;
     display: flex;
     justify-content: space-around;
-    
+
 }
 
 /* styles.module.css */
 
 .navbar {
-    background-color: transparent !important; /* Hace que el fondo sea transparente */
-    border: none; /* Elimina el borde */
-    transition: background-color 0.5s; /* Agrega una transición suave para el cambio de fondo */
-  }
-  
-  .navbar-brand,
-  .navbar-nav .nav-link {
-    color: rgb(0, 0, 0); /* Cambia el color del texto a blanco */
-  }
-  
-  /* Estilos adicionales para resaltar el enlace activo, si es necesario */
-  .navbar-nav .nav-item.active .nav-link {
-    color: #000000; /* Cambia el color del texto del enlace activo */
-  }
-  
-  /* Puedes ajustar y agregar más estilos según tus necesidades */
-  
+    background-color: transparent !important;
+    /* Hace que el fondo sea transparente */
+    border: none;
+    /* Elimina el borde */
+    transition: background-color 0.5s;
+    /* Agrega una transición suave para el cambio de fondo */
+}
+
+.navbar-brand,
+.navbar-nav .nav-link {
+    color: rgb(0, 0, 0);
+    /* Cambia el color del texto a blanco */
+}
+
+/* Estilos adicionales para resaltar el enlace activo, si es necesario */
+.navbar-nav .nav-item.active .nav-link {
+    color: #000000;
+    /* Cambia el color del texto del enlace activo */
+}
+
+/* Puedes ajustar y agregar más estilos según tus necesidades */
+
+.contenedorTyC {
+    width: 50%;
+    margin: 0 auto;
+}
