--- a/app/styles.module.css
+++ b/app/styles.module.css
@@ -17,7 +17,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;0,800;1,500&display=swap');
 
-.principal{
+.principal {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -268,36 +268,132 @@
 }
 
 
-.Productos{
+.Productos {
     text-align: center;
     background-color: #414247;
     padding: 100px0;
     display: flex;
     justify-content: space-around;
-    
+
 }
 
 /* styles.module.css */
 
 .navbar {
-    background-color: transparent !important; /* Hace que el fondo sea transparente */
-    border: none; /* Elimina el borde */
-    transition: background-color 0.5s; /* Agrega una transición suave para el cambio de fondo */
-  }
-  
-  .navbar-brand,
-  .navbar-nav .nav-link {
-    color: rgb(0, 0, 0); /* Cambia el color del texto a blanco */
-  }
-  
-  /* Estilos adicionales para resaltar el enlace activo, si es necesario */
-  .navbar-nav .nav-item.active .nav-link {
-    color: #000000; /* Cambia el color del texto del enlace activo */
-  }
-  
-  /* Puedes ajustar y agregar más estilos según tus necesidades */
-  
-  .contenedorTyC {
+    background-color: transparent !important;
+    /* Hace que el fondo sea transparente */
+    border: none;
+    /* Elimina el borde */
+    transition: background-color 0.5s;
+    /* Agrega una transición suave para el cambio de fondo */
+}
+
+.navbar-brand,
+.navbar-nav .nav-link {
+    color: rgb(0, 0, 0);
+    /* Cambia el color del texto a blanco */
+}
+
+/* Estilos adicionales para resaltar el enlace activo, si es necesario */
+.navbar-nav .nav-item.active .nav-link {
+    color: #000000;
+    /* Cambia el color del texto del enlace activo */
+}
+
+/* Puedes ajustar y agregar más estilos según tus necesidades */
+
+.contenedorTyC {
     width: 50%;
     margin: 0 auto;
-  }
+}
+
+.contenedorSolicitudes {
+    width: 80%;
+    margin: 0 auto;
+}
+
+/*Cards*/
+.containertarjeta {
+    width: 100%;
+    height: 600px;
+	display: flex;
+	max-width: 1100px;
+	margin: auto;
+}
+
+.titletarjeta {
+    width: 100%;
+    max-width: 1080px;
+    margin: auto;
+    padding: 20px;
+    margin-top: 20px;
+    text-align: center;
+    color: #7a7a7a;
+}
+
+.tarjeta {
+    width: 100%;
+    margin: 20px;
+    border-radius: 6px;
+    overflow: hidden;
+    background: #fff;
+    box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.2);
+    transition: all 400ms ease-out;
+    cursor: default;
+}
+
+.tarjeta:hover {
+    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
+    transform: translateY(-3%);
+}
+
+.tarjeta img {
+    width: 100%;
+    height: 210px;
+}
+
+.tarjeta .contenidotarjeta {
+    padding: 15px;
+    text-align: center;
+}
+
+.tarjeta .contenidotarjeta h3 {
+    margin-bottom: 15px;
+    color: #7a7a7a;
+}
+
+.tarjeta .contenidotarjeta p {
+    line-height: 1.8;
+    color: #6a6a6a;
+    font-size: 14px;
+    margin-bottom: 5px;
+}
+
+.tarjeta .contenidotarjeta a {
+    display: inline-block;
+    padding: 10px;
+    margin-top: 10px;
+    text-decoration: none;
+    color: #2fb4cc;
+    border: 1px solid #2fb4cc;
+    border-radius: 4px;
+    transition: all 400ms ease;
+    margin-bottom: 5px;
+}
+
+.tarjeta .contenidotarjeta a:hover {
+    background: #2fb4cc;
+    color: #fff;
+}
+
+@media only screen and (min-width:320px) and (max-width:768px) {
+    .containertarjeta {
+        flex-wrap: wrap;
+    }
+
+    .tarjeta {
+        margin: 15px;
+    }
+}
+
+/*Fin-Cards*/
